--- a/public/.htaccess
+++ b/public/.htaccess
@@ -15,7 +15,7 @@
   # If the above doesn't work you might need to set the `RewriteBase` directive manually, it should be the
   # absolute physical path to the directory that contains this htaccess file.
   # RewriteBase /
-  RewriteBase /biblioteca/public/
+  RewriteBase /biblioFRD-Server/public/
   
   RewriteCond %{REQUEST_FILENAME} !-f
   # RewriteCond %{REQUEST_FILENAME} !-d
