--- a/public/.htaccess
+++ b/public/.htaccess
@@ -19,5 +19,6 @@
   
   RewriteCond %{REQUEST_FILENAME} !-f
   # RewriteCond %{REQUEST_FILENAME} !-d
-  RewriteRule ^(.*)$ %{ENV:BASE}index.php [QSA,L]
+  # RewriteRule ^(.*)$ %{ENV:BASE}index.php [QSA,L]
+  RewriteRule ^ index.php [QSA,L]
 </IfModule>
